--- a/algorithms/sections/ticket01.tex
+++ b/algorithms/sections/ticket01.tex
@@ -1,4 +1,27 @@
-% !TEX root = ../algebra_02.tex
+% !TEX root = ../algorithms.tex
 
-\section{Что то будет}
-
+	\section{Что то будет}
+	
+	\begin{Theorem}{О двоичном поиске}{}
+		Двоичный поиск работает за $\mathcal{O}(\log n)$.
+	\end{Theorem}
+	
+	\begin{Lemma}{О двоичном поиске}{}
+		Двоичный поиск работает за $\mathcal{O}(\log n)$.
+	\end{Lemma}
+	
+	\begin{Proposition}{О двоичном поиске}{}
+		Двоичный поиск работает за $\mathcal{O}(\log n)$.
+	\end{Proposition}
+	
+	\begin{Statement}{О двоичном поиске}{}
+		Двоичный поиск работает за $\mathcal{O}(\log n)$.
+	\end{Statement}
+	
+	\begin{Definition}{О двоичном поиске}{}
+		Двоичный поиск работает за $\mathcal{O}(\log n)$.
+	\end{Definition}
+	
+	\begin{Example}{О двоичном поиске}{}
+		Двоичный поиск работает за $\mathcal{O}(\log n)$.
+	\end{Example}
