--- a/algorithms/algorithms.tex
+++ b/algorithms/algorithms.tex
@@ -36,6 +36,8 @@ BoldItalicFont = cmunbso.otf
 \usepackage{parskip}
 \setlength{\parskip}{6pt}
 \setlength{\parindent}{0pt}
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta,positioning,calc}
 
 % -------------------------------------------------
 % Математика
