--- a/matan/sections/ticket01.tex
+++ b/matan/sections/ticket01.tex
@@ -123,13 +123,13 @@
 	\begin{align*}
 		\ln\!\Bigl(\frac{1+t}{1-t}\Bigr)
 		&= \ln(1+t)-\ln(1-t) \\
-		&= 2t+\frac{2t^3}{3}+\frac{2t^5}{5}+\cdots+r_k(t),
+		&= 2t+\frac{2t^3}{3}+\frac{2t^5}{5}+\cdots+r_{2k+1}(t),
 	\end{align*}
-	\emph{где $r_k(t)$ — остаток (в форме Лагранжа/интегральной и т.п.), $k>10$.}
+	\emph{где $r_{2k+1}(t)$ — остаток (в форме Лагранжа/интегральной и т.п.), $k>10$.}
 	
 	\[
 	\frac12\,\ln\!\Bigl(\frac{1+t}{1-t}\Bigr)
-	= \frac12\Bigl(2t+\frac{2t^3}{3}+\frac{2t^5}{5}+\cdots+r_k(t)\Bigr),
+	= \frac12\Bigl(2t+\frac{2t^3}{3}+\frac{2t^5}{5}+\cdots+r_{2k+1}(t)\Bigr),
 	\qquad k>10.
 	\]
 	
@@ -137,18 +137,18 @@
 	\begin{align*}
 		d_n-d_{n+1}
 		&=\Bigl(n+\tfrac12\Bigr)\ln\!\Bigl(\frac{1+t}{1-t}\Bigr)-1 \\
-		&= t^{-1}\cdot\frac12\Bigl(2t+\frac{2t^3}{3}+\cdots+r_k(t)\Bigr)-1 \\
-		&= \underbrace{\frac13\,t^2+\frac15\,t^4+\cdots+\frac{2\,r_k(t)}{t}}_{> 0}.
+		&= t^{-1}\cdot\frac12\Bigl(2t+\frac{2t^3}{3}+\cdots+r_{2k+1}(t)\Bigr)-1 \\
+		&= \underbrace{\frac13\,t^2+\frac15\,t^4+\cdots+\frac{r_{2k+1}(t)}{2t}}_{> 0}.
 	\end{align*}
 	
 	Оценим сверху $d_n-d_{n+1}$
 	\[
 	\text{Кроме того,}\quad
 	0<d_n-d_{n+1}
-	=\frac13\Bigl(t^2+\frac35t^4+\frac57t^6+\cdots\Bigr)+\frac23\,\frac{r_k(t)}{t}
-	<\frac13\Bigl(t^2+t^4+\cdots+t^{2(k-1)}\Bigr)+\frac23\,t\, r_k(t).
+	=\frac13\Bigl(t^2+\frac35t^4+\frac37t^6+\cdots\Bigr)+\frac13\,\frac{r_{2k+1}(t)}{t}
+	<\frac13\Bigl(t^2+t^4+\cdots+t^{2(k-1)}\Bigr)+\frac13\,\frac{r_{2k+1}(t)}{t}.
 	\]
-	\emph{(Просто грубо заменили дроби $\frac{3}{5},\frac{5}{7},\dots<1$.)}
+	\emph{(Просто грубо заменили дроби $\frac{3}{5},\frac{3}{7},\dots<1$.)}
 	
 	\[
 	t^2+t^4+\dots+t^{2(k-1)}
@@ -160,13 +160,13 @@
 	\[
 	t^{2(k-1)}\xrightarrow[k\to\infty]{}0,
 	\qquad
-	\frac{r_k(t)}{t}\xrightarrow[k\to\infty]{}0
+	\frac{r_{2k+1}(t)}{t}\xrightarrow[k\to\infty]{}0
 	\quad (\text{при фиксированном } t,\ |t|<1).
 	\]
 	
 	\[
-	\text{Следовательно}\qquad
-	0<d_n-d_{n+1}<\frac13\cdot\frac{t^2}{1-t^2}
+	\text{Следовательно по предельному переходу}\qquad
+	0<d_n-d_{n+1}\leq\frac13\cdot\frac{t^2}{1-t^2}
 	=\frac13\left(\frac{1}{\frac1{t^2}-1}\right).
 	\]
 	
@@ -239,7 +239,7 @@
 	\begin{align*}
 		\ln\left(\left(\frac{2^{2n}(n!)^2}{(2n)!}\right)^2\frac{1}{2n+1}\right)
 		&=4n\ln2+4\ln(n!)-2\ln((2n)!)-\ln(2n+1)\\
-		&=4d_n-2d_{2n}+\ln n-\ln2-\ln(2n+1)+o(1)\\
+		&=4d_n-2d_{2n}+\ln n-\ln2-\ln(2n+1)\\
 		&\xrightarrow[n\to\infty]{} 2C-2\ln2.
 	\end{align*}
 	\emph{(Здесь вся “главная” часть сокращается, остаются только $d_n$ и константы.)}
@@ -289,7 +289,7 @@
 	Отсюда: максимум при $0<\alpha<1$, минимум при $\alpha<0$ или $\alpha>1$.
 	
 	\medskip
-	\textbf{Положим} $x:=\dfrac{a}{\alpha}$, \quad $\alpha:=\dfrac{1}{p}$, \quad
+	\textbf{Положим} $x:=\dfrac{a}{b}$, \quad $\alpha:=\dfrac{1}{p}$, \quad
 	$\dfrac{1}{q}:=1-\dfrac{1}{p}=1-\alpha$.
 	
 	\textbf{Тогда}
