typo correction again

--- a/algorithms/sections/ticket01.tex
+++ b/algorithms/sections/ticket01.tex
@@ -1,6 +1,5 @@
-
-
 % !TEX root = ../algorithms.tex
+
 \section{Быстрое преобразование Фурье (FFT).}
 
 \subsection*{Свёртка и умножение многочленов}
@@ -21,20 +20,20 @@
 
 \subsubsection*{Умножение многочленов}
 
-	Рассмотрим многочлены:
-	\[
-	A(x)=a_0+a_1x+\dots+a_{n-1}x^{n-1},
-	\]
-	\[
-	B(x)=b_0+b_1x+\dots+b_{n-1}x^{n-1}.
-	\]
-	
-	Тогда их произведение:
-	\[
-	C(x)=A(x)B(x)
-	= c_0+c_1x+\dots+c_{2n-2}x^{2n-2},
-	\]
-	где коэффициенты $c_k$ задаются инволюцией.
+Рассмотрим многочлены:
+\[
+A(x)=a_0+a_1x+\dots+a_{n-1}x^{n-1},
+\]
+\[
+B(x)=b_0+b_1x+\dots+b_{n-1}x^{n-1}.
+\]
+
+Тогда их произведение:
+\[
+C(x)=A(x)B(x)
+= c_0+c_1x+\dots+c_{2n-2}x^{2n-2},
+\]
+где коэффициенты $c_k$ задаются инволюцией.
 
 \subsubsection*{Сложность}
 
@@ -54,17 +53,17 @@
 	Коэффициенты $A,B$ дополняем нулями до длины $N$.
 	\item Быстро считаем значения в $N$ точках:
 	\[
-	A(\omega^k),\quad B(\omega^k), \qquad k=0,\dots,N-1,
+	A(\omega_k),\quad B(\omega_k), \qquad k=0,\dots,N-1,
 	\]
 	где $\omega$ — примитивный $N$-й корень из единицы.
 	\item Перемножаем покомпонентно:
 	\[
-	y_k = A(\omega^k)\,B(\omega^k).
+	y_k = A(\omega_k)\,B(\omega_k).
 	\]
 	\item По значениям $y_k$ восстанавливаем коэффициенты $C$ обратным FFT.
 \end{enumerate}
 
-Ключевой факт: можно выбрать точки $\omega^k$ так, что и «вычисление значений»,
+Ключевой факт: можно выбрать точки $\omega_k$ так, что и «вычисление значений»,
 и «восстановление коэффициентов» делаются за $O(N\log N)$.
 
 \subsection*{Реализация FFT}
@@ -152,10 +151,24 @@ T(N)=2T\!\left(\frac{N}{2}\right)+O(N)=O(N\log N).
 \begin{proof}
 	Элемент в позиции $(i,j)$ равен
 	\[
-	\sum_{k=0}^{N-1}(\omega^i)^k(\omega^{-j})^k=\sum_{k=0}^{N-1}(\omega^{i-j})^k.
+	\sum_{k=0}^{N-1}(\omega^i)^k(\omega^{-j})^k
+	=\sum_{k=0}^{N-1}(\omega^{i-j})^k.
 	\]
-	Если $i\neq j$, то $\omega^{i-j}\neq 1$ и сумма геометрической прогрессии даёт $0$.
-	Если $i=j$, то получаем сумму из $N$ единиц, то есть $N$.
+	Если $i\neq j$, то $q:=\omega^{i-j}\neq 1$, и по формуле суммы геометрической прогрессии
+	\[
+	\sum_{k=0}^{N-1} q^k=\frac{1-q^N}{1-q}
+	\]
+	получаем
+	\[
+	\sum_{k=0}^{N-1}(\omega^{i-j})^k
+	=\frac{1-(\omega^{i-j})^N}{1-\omega^{i-j}}
+	=\frac{1-(\omega^N)^{\,i-j}}{1-\omega^{i-j}}
+	=\frac{1-1}{1-\omega^{i-j}}=0.
+	\]
+	Если $i=j$, то
+	\[
+	\sum_{k=0}^{N-1}(\omega^{i-j})^k=\sum_{k=0}^{N-1}1=N.
+	\]
 \end{proof}
 
 Следовательно, обратное преобразование — это прямое FFT с корнем $\omega^{-1}$,
@@ -174,6 +187,8 @@ a = \frac{1}{N}\,F_{\omega^{-1}}\,y.
 	\item одно обратное FFT.
 \end{itemize}
 Итого $O(N\log N)$, где $N$ — ближайшая степень двойки, не меньшая $2n-1$.
+
+При этом $2n-1 \le N < 2(2n-1) < 4n$, то есть $N=\Theta(n)$, поэтому итоговая сложность равна $O(n\log n)$.
 
 \subsection*{Обобщение: NTT (Number-Theoretic Transform)}
 
@@ -197,7 +212,7 @@ N=2^k,\qquad p=c\cdot 2^k+1.
 \]
 тогда $\omega$ имеет порядок $N$, и NTT работает полностью по модулю $p$.
 
-\subsection*{Приложение: смысл коэффициентов ДПФ}
+\subsection*{Приложение: смысл коэффициентов DFT}
 
 Пусть дан сигнал (последовательность)
 \[
@@ -223,4 +238,3 @@ i\sin\!\left(\frac{2\pi k}{N}t\right),
 Если в сигнале сильно выражена гармоника частоты $k$, то вклады «складываются»,
 и модуль $|y_k|$ получается большим; если такой частоты нет — вклады
 в основном взаимно компенсируются и $|y_k|$ близок к нулю.
-	
